--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,8 @@ __pycache__
 
 # Allow to exist but don't include it in the repo
 user_song_list.h
+uv.lock
+pyproject.toml
 
 # clangd
 compile_commands.json
